# specterops

./: .gitignore  README.md  claude.md  main.py  pyproject.toml  scratch.py
backend/: board.py  engine.py  loop.py  main.py  state.py  visibility.py
backend/data/: resources.json
controller/: controller.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AbilityCard.tsx  ActionBar.tsx  AgentAbilities.tsx  AgentItems.tsx  Board.tsx  DiceRoll.tsx  HunterAbilities.tsx  ItemCard.tsx  Lobby.tsx  PlayerPanel.tsx  SetupView.tsx
frontend/src/components/__tests__/: ActionBar.test.tsx  Lobby.test.tsx  PlayerPanel.test.tsx  SetupView.test.tsx
frontend/src/styles/: AbilityCard.module.css  ActionBar.module.css  AgentAbilities.module.css  AgentItems.module.css  App.module.css  Board.module.css  DiceRoll.module.css  HunterAbilities.module.css  ItemCard.module.css  Lobby.module.css  PlayerPanel.module.css  SetupView.module.css
frontend/src/types/: game.ts  ws.ts
frontend/src/utils/: hunterImages.ts  itemImages.ts  path.ts
frontend/src/utils/__tests__/: path.test.ts
model/: agent_model.py  board_model.py  game_model.py  hunter_model.py  item_model.py  player_model.py  resources.json
tests/: test_board.py  test_engine.py  test_items.py  test_loop.py  test_state.py  test_visibility.py
view/: game_view.py  join_view.py
